--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<img src="./login_image.png" class="img-fluid" alt="Login Image">
 					</div>
 					<div class="col-lg-7 px-5 pt-5">
-						<form action="./homepage.html" method="post">
+						<form action="./homepage.html">
 							<div class="form-row">
 								<div class="col-lg-7" align="center">
 									<p><h2>Login</h2></p>
